[tool.poetry]
name = "rippling.flux-sdk"
version = "0.0.0"
description = "Rippling Flux App development tools."
authors = ["Rippling Apps <apps@rippling.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.3"
flux-kit-references = {git = "git@github.com:Rippling/flux-kit-references.git"}
werkzeug = "^2.3.7"
jsonpickle = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
