[tool.poetry]
name = "rippling-flux-sdk"
version = "0.0.2"
description = "Defines the interfaces and data-models used by Rippling Flux Apps."
authors = ["Rippling Apps <apps@rippling.com>"]
readme = "README.md"
packages = [{include="flux_sdk"}]

[tool.poetry.dependencies]
python = "^3.9"
"ruamel.yaml" = "0.17.10"
click = ">=8.0,<9"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
flake8 = "6.0.0"
black = "22.12.0"
isort = "5.11.4"
mypy = "0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
